--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
